--- a/src/main/resources/com/m06uf1practa/m06uf1practa/primary.fxml
+++ b/src/main/resources/com/m06uf1practa/m06uf1practa/primary.fxml
@@ -12,36 +12,52 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="538.0" prefWidth="926.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.m06uf1practa.m06uf1practa.Presentacion.PrimaryController">
+<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="540.0" prefWidth="928.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.m06uf1practa.m06uf1practa.Presentacion.PrimaryController">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#bad9f7" height="545.0" layoutX="644.0" layoutY="-5.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="285.0" />
-      <TableView fx:id="tblView" layoutX="-3.0" layoutY="26.0" prefHeight="514.0" prefWidth="648.0">
-        <columns>
-          <TableColumn fx:id="lblNom" prefWidth="120.79998475313187" text="Nom" />
-          <TableColumn fx:id="lblAmbit" minWidth="1.600006103515625" prefWidth="97.60000610351562" text="Ambit" />
-            <TableColumn fx:id="lblMunicipi" prefWidth="99.20002746582031" text="Municipi" />
-            <TableColumn fx:id="lblLocalitat" prefWidth="80.79998779296875" text="Localitat" />
-            <TableColumn fx:id="lblData" prefWidth="97.60003662109375" text="Data" />
-            <TableColumn fx:id="lblFesta" prefWidth="148.79998779296875" text="Festa" />
-        </columns>
-      </TableView>
-      <Button fx:id="btnCerca" layoutX="742.0" layoutY="458.0" mnemonicParsing="false" onAction="#cercaDades" prefHeight="26.0" prefWidth="86.0" text="Cerca" />
-      <DatePicker fx:id="dpFirst" layoutX="710.0" layoutY="334.0" promptText="Primera data" />
-      <DatePicker fx:id="dpSecond" layoutX="710.0" layoutY="391.0" promptText="Segona data" />
-      <TextField fx:id="intxtNom" layoutX="711.0" layoutY="109.0" promptText="Nom" />
-      <TextField fx:id="intxtMunicipi" layoutX="710.0" layoutY="216.0" promptText="Municipi" />
-      <TextField fx:id="intxtLocalitat" layoutX="712.0" layoutY="271.0" promptText="Localitat" />
-      <ChoiceBox fx:id="chbxAmbit" layoutX="709.0" layoutY="156.0" prefWidth="150.0" />
-      <Text fx:id="lvlCercaDades" layoutX="713.0" layoutY="65.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cerca de dades">
-         <font>
-            <Font size="21.0" />
-         </font>
-      </Text>
-      <MenuBar fx:id="btnmenu" layoutX="-4.0" layoutY="1.0" prefHeight="26.0" prefWidth="648.0">
+      <Pane layoutX="638.0" layoutY="6.0" prefHeight="540.0" prefWidth="290.0" AnchorPane.bottomAnchor="-6.0" AnchorPane.leftAnchor="638.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="6.0">
+         <children>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#bad9f7" height="547.0" layoutY="-11.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="290.0" />
+            <Button fx:id="btnCerca" layoutX="47.0" layoutY="477.0" mnemonicParsing="false" onAction="#cercaDades" prefHeight="26.0" prefWidth="66.0" text="Cerca" />
+            <DatePicker fx:id="dpFirst" layoutX="48.0" layoutY="373.0" prefHeight="25.0" prefWidth="150.0" promptText="Primera data" />
+            <DatePicker fx:id="dpSecond" layoutX="47.0" layoutY="418.0" prefHeight="25.0" prefWidth="150.0" promptText="Segona data" />
+            <TextField fx:id="intxtNom" layoutX="49.0" layoutY="119.0" promptText="Nom" />
+            <TextField fx:id="intxtMunicipi" layoutX="49.0" layoutY="166.0" promptText="Municipi" />
+            <TextField fx:id="intxtLocalitat" layoutX="48.0" layoutY="218.0" promptText="Localitat" />
+            <ChoiceBox fx:id="chbxAmbit" layoutX="48.0" layoutY="324.0" prefWidth="150.0" />
+            <Text fx:id="lvlCercaDades" layoutX="52.0" layoutY="78.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cerca de dades">
+               <font>
+                  <Font size="21.0" />
+               </font>
+            </Text>
+            <ImageView fx:id="btnClose" fitHeight="26.0" fitWidth="59.0" layoutX="257.0" layoutY="1.0" onMouseClicked="#closeApp" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../images/close.png" />
+               </image>
+            </ImageView>
+            <Button fx:id="neteja" layoutX="143.0" layoutY="478.0" mnemonicParsing="false" onAction="#limpiarTabla" text="Neteja" />
+            <ChoiceBox fx:id="nombreFiesta" layoutX="48.0" layoutY="270.0" prefWidth="150.0" />
+         </children>
+      </Pane>
+      <Pane layoutX="2.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="547.0" prefWidth="613.0">
+         <children>
+            <TableView fx:id="tblView" layoutX="-1.0" layoutY="26.0" prefHeight="516.0" prefWidth="639.0">
+              <columns>
+                <TableColumn fx:id="lblNom" prefWidth="120.79998475313187" text="Nom" />
+                <TableColumn fx:id="lblAmbit" minWidth="1.600006103515625" prefWidth="97.60000610351562" text="Ambit" />
+                  <TableColumn fx:id="lblMunicipi" prefWidth="99.20002746582031" text="Municipi" />
+                  <TableColumn fx:id="lblLocalitat" prefWidth="80.79998779296875" text="Localitat" />
+                  <TableColumn fx:id="lblData" prefWidth="97.60003662109375" text="Data" />
+                  <TableColumn fx:id="lblFesta" prefWidth="148.79998779296875" text="Festa" />
+              </columns>
+            </TableView>
+         </children>
+      </Pane>
+      <MenuBar fx:id="btnmenu" prefHeight="26.0" prefWidth="639.0">
         <menus>
           <Menu mnemonicParsing="false" text="Fitxer">
             <items>
@@ -51,10 +67,5 @@
           </Menu>
         </menus>
       </MenuBar>
-      <ImageView fx:id="btnClose" fitHeight="26.0" fitWidth="33.0" layoutX="899.0" layoutY="2.0" onMouseClicked="#closeApp" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../../../../../../../Desktop/imagenes%20Java%20botones/close.png" />
-         </image>
-      </ImageView>
    </children>
 </AnchorPane>
