arreglar filtros de busqueda y añadir ventana de exportacion

--- a/src/main/resources/com/m06uf1practa/m06uf1practa/primary.fxml
+++ b/src/main/resources/com/m06uf1practa/m06uf1practa/primary.fxml
@@ -61,7 +61,7 @@
         <menus>
           <Menu mnemonicParsing="false" text="Fitxer">
             <items>
-                  <MenuItem mnemonicParsing="false" text="Exportar" />
+                  <MenuItem fx:id="exportFile" mnemonicParsing="false" onAction="#exportarArchivo" text="Exportar" />
               <MenuItem fx:id="importFile" mnemonicParsing="false" onAction="#importarFichero" text="Importar" />
             </items>
           </Menu>
