--- a/src/main/resources/Presentacion/primary.fxml
+++ b/src/main/resources/Presentacion/primary.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="540.0" prefWidth="928.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.m06uf1practa.m06uf1practa.Presentacion.PrimaryController">
+<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="540.0" prefWidth="928.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Presentacion.PrimaryController">
    <children>
       <Pane layoutX="638.0" layoutY="6.0" prefHeight="540.0" prefWidth="290.0" AnchorPane.bottomAnchor="-6.0" AnchorPane.leftAnchor="638.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="6.0">
          <children>
