--- a/src/main/resources/Presentacion/informe.fxml
+++ b/src/main/resources/Presentacion/informe.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="455.0" style="-fx-background-color: #ba3838; -fx-border-color: black;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Presentacion.InformeController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="455.0" style="-fx-background-color: #aed7fc; -fx-border-color: black;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Presentacion.InformeController">
    <children>
       <Text layoutX="192.0" layoutY="69.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Fiestas">
          <font>
