--- a/src/main/resources/Presentacion/entreFechas.fxml
+++ b/src/main/resources/Presentacion/entreFechas.fxml
@@ -9,7 +9,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="452.0" prefWidth="564.0" style="-fx-border-color: black;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Presentacion.EntreFechasController">
    <children>
-      <BarChart fx:id="grafica" layoutX="32.0" layoutY="26.0" title="Fiestas">
+      <BarChart fx:id="grafica" layoutX="32.0" layoutY="26.0" prefHeight="333.0" prefWidth="463.0" title="Festes">
         <xAxis>
           <CategoryAxis fx:id="categoria" side="BOTTOM" />
         </xAxis>
